--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,4 @@
-:root {
-  --gold: #b9962e;
-  --dark: #292826;
-  --white: #fff;
-  --transition: all 0.5s ease;
-  --border: .1rem solid #fff;
-}
+/* ---------------------------------------- Reset ---------------------------------------- */
 * {
   padding: 0;
   margin: 0;
@@ -12,11 +6,19 @@
   text-decoration: none;
   box-sizing: border-box;
   scroll-behavior: smooth;
-}
-
-body {
   font-family: 'Times New Roman', Times, serif
 }
+
+/* ---------------------------------------- Root ---------------------------------------- */
+:root {
+  --gold: #b9962e;
+  --dark: #292826;
+  --white: #fff;
+  --transition: all 0.5s ease;
+  --border: .1rem solid #fff;
+}
+
+/* ---------------------------------------- Button ---------------------------------------- */
 .btn {
   width: 140px;
   margin: 3rem auto;
@@ -30,9 +32,11 @@ body {
   cursor: pointer;
   transition: var(--transition);
 }
+
 .btn:hover {
   opacity: 0.5;
 }
+
 .btnBook {
   width: 150px;
   margin: 1rem auto;
@@ -45,6 +49,14 @@ body {
   background-color: var(--gold);
   cursor: pointer;
 }
+
+/* ---------------------------------------- Carousel image ---------------------------------------- */
+.carousel-item img {
+  width: 100%;
+  height: 450px;
+}
+
+/* ---------------------------------------- Header ---------------------------------------- */
 .header {
   min-height: 100vh;
   padding: 1.5rem;
@@ -54,10 +66,12 @@ body {
   background: linear-gradient(#0009, #0003), url("../images/bg.jpg") center/cover;
   background-repeat: no-repeat;
 }
+
 .header__menu {
   display: flex;
   justify-content: space-between;
 }
+
 .header__title {
   width: 80vw;
   margin: 0 auto;
@@ -68,11 +82,13 @@ body {
   flex-direction: column;
   justify-content: center;
 }
+
 .header__title h2 {
   padding: 2rem 0;
   font-size: 3rem;
   border-bottom: var(--border);
 }
+
 .header__button {
   margin: 2rem 0;
   font-size: 1.5rem;
@@ -85,12 +101,16 @@ body {
   border: var(--border);
   transition: var(--transition);
 }
+
 .header__button:hover {
   background: transparent;
 }
+
+/* ---------------------------------------- Menu ---------------------------------------- */
 .open-menu {
   cursor: pointer;
 }
+
 .close-menu {
   position: absolute;
   right: 25px;
@@ -98,9 +118,12 @@ body {
   cursor: pointer;
   transition: var(--transition);
 }
+
 .close-menu:hover {
   opacity: 0.6;
 }
+
+/* ---------------------------------------- Navigation ---------------------------------------- */
 .navigation {
   position: fixed;
   top: 0;
@@ -113,13 +136,16 @@ body {
   transition: var(--transition);
   z-index: 10;
 }
+
 .navigation.show {
   right: 0;
 }
+
 .navigation__menu {
   padding: 1rem;
   margin-top: 6rem;
 }
+
 .navigation__menu li a {
   padding: 1.5rem 0;
   display: block;
@@ -129,14 +155,12 @@ body {
   transition: var(--transition);
   opacity: 0.8;
 }
-.navigation__menu li a:hover{
+
+.navigation__menu li a:hover {
   padding-left: 2.5rem;
 }
-.sign-up, 
-.log-in{
-  color: var(--white);
-  background: var(--gold);
-}
+
+/* ---------------------------------------- Description ---------------------------------------- */
 .description {
   text-align: center;
   width: 15rem;
@@ -147,48 +171,58 @@ body {
   text-transform: uppercase;
   border-bottom: .2rem solid var(--dark);
 }
+
+/* ---------------------------------------- Services ---------------------------------------- */
 .services {
   margin: 5rem 0;
 }
+
 .service {
   margin: 2rem 0;
   display: flex;
 }
+
 .list__style li {
   list-style: circle;
 }
+
 .service__item {
   padding-left: 2rem;
 }
+
 .service__item h2 {
   opacity: 0.6;
 }
+
 .service__item button {
   margin: 2rem 0 0;
   color: var(--white);
   background: var(--gold);
 }
+
 .room__item {
   padding-bottom: 1rem;
   background: var(--dark);
   color: var(--white);
 }
-.carousel-item img {
-  width: 100%;
-  height: 450px;
-}
+
 .room__text {
   padding: 2rem;
 }
+
+/* ---------------------------------------- Rate ---------------------------------------- */
 .rate {
   margin: 1rem 0;
   opacity: 0.5;
 }
-.rate span  {
+
+.rate span {
   font-size: 2rem;
   font-weight: 900;
   color: var(--gold);
 }
+
+/* ---------------------------------------- Book image ---------------------------------------- */
 .bookRoom {
   height: 100vh;
   padding: 2rem;
@@ -197,86 +231,110 @@ body {
   justify-content: center;
   color: var(--white);
   filter: blur();
-  background:url('../images/bgBook.jpg') center/cover;;
+  background: url('../images/bgBook.jpg') center/cover;
+  ;
   background-repeat: no-repeat;
 }
+
+/* ---------------------------------------- Form ---------------------------------------- */
 .form__item {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 40vw;
 }
-.form__item .btn  {
+
+.form__item .btn {
   color: var(--dark);
   background-color: var(--gold);
 }
-@media(min-width: 1370px) {
-  .room__item {
-    display: flex;
-  }
-}
+
+
 .footer {
   color: var(--white);
   text-align: center;
   background: var(--dark);
 }
+
 .footer a {
   display: block;
   text-decoration: none;
   color: var(--white);
 }
-@media(min-width: 900px) {
-  .rooms__container {
-    display: flex;
-    flex-wrap: wrap;
-  }
+
+
+/* ---------------------------------------- Media 1370px ---------------------------------------- */
+@media(min-width: 1370px) {
   .room__item {
-    flex: 0 0 calc(50% - 20px);
-    margin: 10px;
-  }
-  .footer__container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
+    display: flex;
   }
 }
+
+/* ---------------------------------------- Media 1170px ---------------------------------------- */
 @media(min-width: 1170px) {
   .services__container {
     display: grid;
     grid-column-gap: 30px;
     grid-template-columns: repeat(2, 1fr);
   }
+
   .footer {
     text-align: left;
     height: 100vh;
     padding: 5rem 5rem 0;
   }
+
   .footer__container {
     grid-template-columns: repeat(4, 1fr);
   }
+
   .contact__item {
     margin-bottom: 15px;
     display: grid;
-    grid-template-columns: 10% 90%;
     align-items: center;
   }
-  .bookRoom__form{
+
+  .bookRoom__form {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 24px;
   }
+
   .bookRoom {
     height: 100vh;
     display: grid;
   }
 }
+
+/* ---------------------------------------- Media 900px ---------------------------------------- */
+@media(min-width: 900px) {
+  .rooms__container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .room__item {
+    flex: 0 0 calc(50% - 20px);
+    margin: 10px;
+  }
+
+  .footer__container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+  }
+}
+
+/* ---------------------------------------- Media 500px ---------------------------------------- */
 @media(max-width: 500px) {
   .carousel-item img {
     width: 100%;
     height: 300px;
   }
+
   .navigation {
     width: 100vw;
   }
+
   .form__item {
     width: 80vw;
   }
